# astral-assist

./: .env.example  .gitignore  .repopackignore  README.md  astral-assist-code.txt  index.html  package-lock.json  package.json  repopack-ai-instructions.md  repopack.config.json  start-script.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
prisma/: schema.prisma
public/: audioProcessor.js
scripts/: xmlUpdater.mjs  xmlUpdater.ts
src/: App.tsx  main.ts  shims-vue.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/assistant-groups/: AssistantGroupSelector.tsx
src/components/assistant-profile/: AssistantProfileSelector.tsx
src/components/assistants/: ActiveAssistantDisplay.tsx  AssistantCard.tsx  AssistantCarousel.tsx  NoAssistantSelected.tsx
src/components/chat/: ChatArea.tsx  ChatHistory.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  TranscriptDisplay.tsx
src/components/icons/: DefaultAIIcon.tsx
src/components/layout/: CustomTitlebar.tsx  Header.tsx  SettingsDrawer.tsx
src/components/transparency/: TransparencyFeature.tsx
src/components/ui/: ButtonItem.tsx  CardContentItem.tsx  CardItem.tsx  CarouselItem.tsx  GradientOverlay.tsx  InputItem.tsx  MultiSelectItem.tsx  SelectItem.tsx  TextareaItem.tsx  ToggleItem.tsx  a-button.tsx  a-input.tsx  a-toggle.tsx
src/features/theme/: DarkModeToggle.tsx
src/modules/command/: CommandModule.tsx
src/modules/query/: QueryModule.tsx  aiService.ts
src/router/: index.ts
src/services/stt/: STTFactory.ts  (+2 more)
src/store/: appStore.ts  assistantStore.ts  uiStore.ts
src/types/: assistant.ts  web-speech-api.d.ts
src/views/: Home.tsx
