[package]
name = "app"
version = "0.1.0"
description = "Astral-Assist"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = [
    "fs-all",
    "protocol-all",
    "path-all",
    "window-set-title",
    "window-unmaximize",
    "window-minimize",
    "window-set-skip-taskbar",
    "window-unminimize",
    "window-start-dragging",
    "window-show",
    "window-set-size",
    "window-set-position",
    "window-set-decorations",
    "window-set-resizable",
    "window-set-cursor-icon",
    "window-set-min-size",
    "window-set-max-size",
    "window-create",
    "window-set-cursor-grab",
    "window-set-icon",
    "window-set-fullscreen",
    "window-set-focus",
    "window-set-cursor-position",
    "window-close",
    "window-set-always-on-top",
    "window-request-user-attention",
    "window-hide",
    "window-set-cursor-visible",
    "window-maximize",
    "window-center",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
